Fix mobile image overflow in product pages

--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,9 @@
 box-sizing: border-box;
 object-fit: contain;}
 body{padding: 0%;
-    margin: 0%;}
+    margin: 0%;
+  overflow-x: hidden;}
+    
 
 div.menu{
         font-size: 20px;
@@ -904,13 +906,15 @@ p.rtext{font-size: 10px;}
     padding: 0%;
     margin: 0%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif!important;
-box-sizing: border-box;
-object-fit: contain;}
-body{padding: 0%;
-    margin: 0%;}
+    box-sizing: border-box;
+    object-fit: contain;}
+    body{padding: 0%;
+    margin: 0%;
+  overflow-x: hidden;}
+
 
 div.menu{
-        font-size: 10px;
+    font-size: 10px;
     display: inline;
     position: sticky;
     z-index: 999;}
@@ -932,7 +936,7 @@ ul.options li a{display: inline-block;
 
 ul.options{position: -webkit-sticky; 
     position: sticky;
-top: 0%;}
+    top: 0%;}
 
 ul.option a:hover{background-color:transparent;
     color: darkgray;}
@@ -940,8 +944,8 @@ ul.option a:hover{background-color:transparent;
 div.introtext{font-size: 15px;
     
     font-weight: 600;
-text-align: center;
-color: black;
+    text-align: center;
+    color: black;
 
 }
 
